--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory
-remote_user = your_username
+remote_user = ivan
 
 [ssh_connection]
 # Укажите путь к ключу в параметре `private_key_file`
